# ic-sqlite-svelte-demo

./: Cargo.toml  README.md  dfx.json  ic-test.json  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: build-check.yml
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs  persons.rs  todos.rs
src/frontend/: package.json
src/frontend/src/: app.html  index.scss
src/frontend/src/lib/: canisters.js
src/frontend/src/lib/components/: Goodbye.svelte  Hello.svelte  Persons.svelte  Todo.svelte  TodoList.svelte
src/frontend/src/routes/: +page.svelte
tests/: Cargo.toml
tests/src/: test_setup.rs  tests.rs
tests/src/bindings/: backend.rs  mod.rs
