[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "=0.10.14"
ic-cdk = "0.18"
ic-rusqlite = {path = "../../../../wasi4ic/ic-rusqlite", version = "0.4.3", features = ["precompiled"]}

ic-sql-migrate = { version = "0.0.4", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20.0"
anyhow = "1.0.99"
email_address = "0.2.9"